@@ -1,3 +1,11 @@
+2005-03-06 Niklas Knutsson  <nq@altern.org>
+
+	* 5e2 = 5E2 = 500 and 5e = 5*e
+
+2005-02-08 Niklas Knutsson  <nq@altern.org>
+	
+	* Update solve2()
+
 2005-02-06 Niklas Knutsson  <nq@altern.org>
 
 	* Dialog with buttons works in gtk+-2.6.2
